--- a/index.html
+++ b/index.html
@@ -9,25 +9,38 @@
 </head>
 <body>
     <div class="calculator">
-        <div id="screen"></div>
-        <div class="numbers">
-            <button class="number" id="one">1</button>
-            <button class="number" id="two">2</button>
-            <button class="number" id="three">3</button>
-            <button class="number" id="four">4</button>
-            <button class="number" id="five">5</button>
-            <button class="number" id="six">6</button>
-            <button class="number" id="seven">7</button>
-            <button class="number" id="eight">8</button>
-            <button class="number" id="nine">9</button>
+        <div id="screen">
+            <span id="screen-text"></span>
+            <img id="reaction-face" src="heh1.png" alt="Reaction Face" />
         </div>
-        <div class="operators">
-            <button class="operator" id="add">+</button>
-            <button class="operator" id="subtract">-</button>
-            <button class="operator" id="multiply">x</button>
-            <button class="operator" id="divide">÷</button>
-            <button class="equalButton" id="equal">=</button>
+
+        <div class="buttons-container">
+            <div class="button-row">
+                <button class="number" id="nine">9</button>
+                <button class="number" id="eight">8</button>
+                <button class="number" id="seven">7</button>
+                <button class="operator" id="divide">÷</button>
+            </div>    
+            <div class="button-row">
+                <button class="number" id="six">6</button>
+                <button class="number" id="five">5</button>
+                <button class="number" id="four">4</button>
+                <button class="operator" id="multiply">x</button>
+            </div>
+            <div class="button-row">
+                <button class="number" id="three">3</button>
+                <button class="number" id="two">2</button>
+                <button class="number" id="one">1</button>
+                <button class="operator" id="add">+</button>          
+            </div>
+            <div class="button-row">
+                <button class="number" id="zero">0</button>
+                <button id="decimal">.</button>
+                <button class="operator" id="subtract">-</button>
+                <button class="equalButton" id="equal">=</button>
+            </div>
         </div>
+
         <button class="clearButton">clear</button>
     </div>
 </body>
